# libgfd

./: README.md  downloader.py  main.py  pyproject.toml  requirements.txt  setup.py
helpers/: __init__.py  config.py  download_utils.py  file_utils.py  general_utils.py  gofile_utils.py
helpers/managers/: __init__.py  live_manager.py  log_manager.py  progress_manager.py
project_name/: __init__.py  core.py  module1.py
