[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name: "Steffen L. Norgren", email: "steffen@norgren.ca" }
]
name = "libgfd"
version = "0.1.0"
description = "A Python library for downloading files from GoFile.io with support for batch operations"
